--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="iframe-wrapper">
       <iframe 
         id="powerbi-iframe"
-        src="https://app.powerbi.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9&pageName=ReportSection&filterPaneEnabled=false&navContentPaneEnabled=false" 
+        src="https://app.powerbi.com/reportEmbed?reportId=f72ae162-1589-4ddf-ac74-49f339e222f8&autoAuth=true&ctid=ea38e8bc-2dca-498c-baf2-f138a9968398&navContentPaneEnabled=false&filterPaneEnabled=false" 
         allowfullscreen="true">
       </iframe>
     </div>
@@ -76,7 +76,7 @@
     }
 
     // Atualização automática a cada 15 segundos
-    setInterval(refreshDashboard, 15000);
+    setInterval(refreshDashboard, 1800000);
 
     // Controle de tela cheia
     function toggleFullscreen() {
@@ -90,3 +90,4 @@
   </script>
 </body>
 </html>
+
