--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     }
 
     // Atualização automática a cada 15 segundos
-    setInterval(refreshDashboard, 15000);
+    setInterval(refreshDashboard, 1800000);
   </script>
 </body>
 </html>
+
