--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <iframe 
     id="powerbi-iframe"
-    src="https://app.powerbi.com/reportEmbed?reportId=f72ae162-1589-4ddf-ac74-49f339e222f8&autoAuth=true&ctid=ea38e8bc-2dca-498c-baf2-f138a9968398&navContentPaneEnabled=false&filterPaneEnabled=false" 
+    src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9&navContentPaneEnabled=false&filterPaneEnabled=false" 
     allowfullscreen="true">
   </iframe>
 
@@ -42,4 +42,5 @@
   </script>
 </body>
 </html>
+
 
