--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <iframe 
     id="powerbi-iframe"
-    src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9&navContentPaneEnabled=false&filterPaneEnabled=false" 
+    src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9" 
     allowfullscreen="true">
   </iframe>
 
@@ -42,5 +42,3 @@
   </script>
 </body>
 </html>
-
-
