--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <iframe 
     id="powerbi-iframe"
-    src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9" 
+    src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMWRlNzcxODUtYmU3Ni00MTAyLWExZTUtNDU4MzA5NzBmMzNhIiwidCI6ImVhMzhlOGJjLTJkY2EtNDk4Yy1iYWYyLWYxMzhhOTk2ODM5OCJ9&chromeless=1&hidePageNavigation=true&hideBookmarks=true&hideHeader=true&hideFooter=true" 
     allowfullscreen="true">
   </iframe>
 
